# mini-pc

./: README.md  bruteforce.py  commands.py  interface.py  main.py  pyproject.toml  writeup.md
